--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</div>
 				<nav>
 					<ul id="MenuItems">
-						<li><a href="Best Buy.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="products.html">Products</a></li>					
 						<li><a href="contactus.html">Contact Us</a></li>
 						<li><a href="">Account</a></li>
